--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Animalu" />
   <meta property="og:description" content="Official artist website." />
-  <meta property="og:image" content="/assets/img/og-image.jpg" />
+  <meta property="og:image" content="assets/img/og-image.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
@@ -19,11 +19,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Animalu" />
   <meta name="twitter:description" content="Official artist website." />
-  <meta name="twitter:image" content="/assets/img/og-image.jpg" />
+  <meta name="twitter:image" content="assets/img/og-image.jpg" />
 
   <link rel="canonical" href="" />
-  <link rel="preload" href="/assets/css/styles.css" as="style" />
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="preload" href="assets/css/styles.css" as="style" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 
 <body>
@@ -81,7 +81,7 @@
 
         <div class="hero-card reveal">
           <div class="hero-media">
-            <img id="artistImg" src="/assets/img/artist.jpg" alt="Artist photo" loading="lazy"
+            <img id="artistImg" src="assets/img/artist.jpg" alt="Artist photo" loading="lazy"
                  onerror="this.style.display='none'; document.getElementById('heroFallback').style.display='flex';" />
             <div class="fallback" id="heroFallback" style="display:none;">ANIMALU</div>
           </div>
@@ -244,6 +244,6 @@
   </div>
 </noscript>
 
-<script defer src="/assets/js/main.js"></script>
+<script defer src="assets/js/main.js"></script>
 </body>
 </html>
