Restyle homepage collage and fix SEO script

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="container hero-grid">
         <div class="hero-content reveal">
           <p class="eyebrow">Official Artist Site</p>
-          <h1>Animalu</h1>
+          <h1 class="hero-title">Animalu</h1>
           <p class="tagline" data-field="tagline">Raw emotion. Honest lyrics. No filters.</p>
           <div class="cta-group">
             <a class="btn btn-primary" href="#latest">Latest release</a>
@@ -62,11 +62,39 @@
         </div>
         <div class="hero-media reveal" aria-hidden="true">
           <div class="poster">
-            <img src="/assets/img/artist.svg" alt="" loading="lazy" />
+            <img src="/assets/img/rsz_090a4254.jpg" alt="" loading="lazy" />
             <span class="poster-glow"></span>
             <span class="poster-text">Stage. Street. Truth.</span>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="section featured" id="featured">
+      <div class="container">
+        <div class="section-header reveal">
+          <p class="eyebrow">Featured work</p>
+          <h2>Visual diary</h2>
+          <p class="section-sub">A collage of moments, backstage energy, and raw clips.</p>
+        </div>
+        <div class="collage-grid reveal">
+          <div class="collage-card wide">
+            <img src="/assets/img/ab6761670000ecd4b5413a80c4acc5e1a13fd73d.jpeg" alt="Animalu visual still" loading="lazy" />
+          </div>
+          <div class="collage-card">
+            <img src="/assets/img/ab6761670000ecd4f02c55de593bd9c364cb0c58.jpeg" alt="Animalu portrait" loading="lazy" />
+          </div>
+          <div class="collage-card tall">
+            <img src="/assets/img/victorimage.jpg" alt="Animalu stage moment" loading="lazy" />
+          </div>
+          <div class="collage-card">
+            <img src="/assets/img/ab6761670000ecd45547b343b45cab1c1962bf08.jpeg" alt="Animalu performance shot" loading="lazy" />
+          </div>
+          <div class="collage-card">
+            <img src="/assets/img/ab6761670000ecd441150316c9c646f18ad5ef8f.jpeg" alt="Animalu promo still" loading="lazy" />
+          </div>
+        </div>
+        <div class="collage-plus" aria-hidden="true">+</div>
       </div>
     </section>
 
