Fix asset paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta property="og:title" content="Animalu – Official Artist Site" />
   <meta property="og:description" content="Official website for Animalu. New music, live shows, videos and booking." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/assets/img/og-image.svg" />
+  <meta property="og:image" content="assets/img/og-image.svg" />
   <meta property="og:url" content="/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Animalu – Official Artist Site" />
   <meta name="twitter:description" content="Official website for Animalu. New music, live shows, videos and booking." />
-  <meta name="twitter:image" content="/assets/img/og-image.svg" />
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <meta name="twitter:image" content="assets/img/og-image.svg" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
   <script type="application/ld+json" id="artist-jsonld">
     {
       "@context": "https://schema.org",
@@ -62,7 +62,7 @@
         </div>
         <div class="hero-media reveal" aria-hidden="true">
           <div class="poster">
-            <img src="/assets/img/rsz_090a4254.jpg" alt="" loading="lazy" />
+            <img src="assets/img/rsz_090a4254.jpg" alt="" loading="lazy" />
             <span class="poster-glow"></span>
             <span class="poster-text">Stage. Street. Truth.</span>
           </div>
@@ -79,19 +79,19 @@
         </div>
         <div class="collage-grid reveal">
           <div class="collage-card wide">
-            <img src="/assets/img/ab6761670000ecd4b5413a80c4acc5e1a13fd73d.jpeg" alt="Animalu visual still" loading="lazy" />
+            <img src="assets/img/ab6761670000ecd4b5413a80c4acc5e1a13fd73d.jpeg" alt="Animalu visual still" loading="lazy" />
           </div>
           <div class="collage-card">
-            <img src="/assets/img/ab6761670000ecd4f02c55de593bd9c364cb0c58.jpeg" alt="Animalu portrait" loading="lazy" />
+            <img src="assets/img/ab6761670000ecd4f02c55de593bd9c364cb0c58.jpeg" alt="Animalu portrait" loading="lazy" />
           </div>
           <div class="collage-card tall">
-            <img src="/assets/img/victorimage.jpg" alt="Animalu stage moment" loading="lazy" />
+            <img src="assets/img/victorimage.jpg" alt="Animalu stage moment" loading="lazy" />
           </div>
           <div class="collage-card">
-            <img src="/assets/img/ab6761670000ecd45547b343b45cab1c1962bf08.jpeg" alt="Animalu performance shot" loading="lazy" />
+            <img src="assets/img/ab6761670000ecd45547b343b45cab1c1962bf08.jpeg" alt="Animalu performance shot" loading="lazy" />
           </div>
           <div class="collage-card">
-            <img src="/assets/img/ab6761670000ecd441150316c9c646f18ad5ef8f.jpeg" alt="Animalu promo still" loading="lazy" />
+            <img src="assets/img/ab6761670000ecd441150316c9c646f18ad5ef8f.jpeg" alt="Animalu promo still" loading="lazy" />
           </div>
         </div>
         <div class="collage-plus" aria-hidden="true">+</div>
@@ -206,6 +206,6 @@
     </div>
   </footer>
 
-  <script src="/assets/js/main.js" defer></script>
+  <script src="assets/js/main.js" defer></script>
 </body>
 </html>
